# moover_rust

./: .gitignore  Cargo.toml  makefile
src/: main.rs  message_handler.rs  moove.rs  sample.rs
src/commands/: mod.rs  moove.rs
src/other/: mod.rs  msg.rs  notice.rs  tenor.rs  tenor_builder.rs  tenor_types.rs
src/util/: debug.rs  mod.rs  security.rs  utilities.rs
