[package]
name = "moover_rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
anyhow = "1.0.71"
tokio-cron-scheduler = "0.10.0"
dotenv = "0.15.0"
# poise = "0.5.5"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http", "cache"] }
serenity_utils = "0.7.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
regex = "1.9.0"
chrono = "0.4.31"
sqlx = {version="0.7.3", features=["runtime-tokio", "sqlite"]}

[features]
DEBUG = []
RELEASE = []
